tests/fixtures/invalid/str_neg.py
# Cannot use unary - on Str
x: str = -"hello"
